--- a/main.html
+++ b/main.html
@@ -1,16 +1,196 @@
-<!DOCTYPE html>
-
-<html>
-
+ <!DOCTYPE html>
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <title>Cards Gallery</title>
+  <style>
+    h2 {
+      text-align: center;
+    }
+    /* .card-body {
+      text-align: center;
+    } */
+      .card img {
+      cursor: zoom-in;
+      border-top-left-radius: .75rem;
+      border-top-right-radius: .75rem;
+      object-fit: cover;
+      height: 180px;
+    }
+    .card { border-radius: .75rem; }
+    .card h6, .card p { text-align: center; }
+    .carousel-item img {
+      max-height: 90vh;
+      object-fit: contain;
+      margin: auto;
+      border-radius: .5rem;
+    }
+  </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+  <h2>Cards Gallery</h2>
 
+  <!-- ===== Gallery ===== -->
+  <div class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="col">
+      <div class="card h-100">
+        <img src="https://storage.googleapis.com/acciojob-open-file-collections/image1.jpg" class="card-img-top gallery-img" data-bs-target="#lightboxModal" data-bs-slide-to="0">
+        <div class="card-body">
+          <h6 class="card-title">Card title</h6>
+          <p class="card-text">This is a wider card with supporting text.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card h-100">
+        <img src="https://storage.googleapis.com/acciojob-open-file-collections/image2.jpg" class="card-img-top gallery-img" data-bs-target="#lightboxModal" data-bs-slide-to="1">
+        <div class="card-body">
+          <h6 class="card-title">Card title</h6>
+          <p class="card-text">This card has supporting text.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card h-100">
+        <img src="https://storage.googleapis.com/acciojob-open-file-collections/image3.jpg" class="card-img-top gallery-img" data-bs-target="#lightboxModal" data-bs-slide-to="2">
+        <div class="card-body">
+          <h6 class="card-title">Card title</h6>
+          <p class="card-text">This card has longer text content.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <br>
+
+  <div class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="col">
+      <div class="card h-100">
+        <img src="https://storage.googleapis.com/acciojob-open-file-collections/image4.jpg" class="card-img-top gallery-img" data-bs-target="#lightboxModal" data-bs-slide-to="3">
+        <div class="card-body">
+          <h6 class="card-title">Card title</h6>
+          <p class="card-text">Supporting text below.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card h-100">
+        <img src="https://storage.googleapis.com/acciojob-open-file-collections/image5.jpg" class="card-img-top gallery-img" data-bs-target="#lightboxModal" data-bs-slide-to="4">
+        <div class="card-body">
+          <h6 class="card-title">Card title</h6>
+          <p class="card-text">Natural lead-in to content.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card h-100">
+        <img src="https://storage.googleapis.com/acciojob-open-file-collections/image6.jpg" class="card-img-top gallery-img" data-bs-target="#lightboxModal" data-bs-slide-to="5">
+        <div class="card-body">
+          <h6 class="card-title">Card title</h6>
+          <p class="card-text">Even longer card content.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <br>
+
+  <div class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="col">
+      <div class="card h-100">
+        <img src="https://storage.googleapis.com/acciojob-open-file-collections/image7.jpg" class="card-img-top gallery-img" data-bs-target="#lightboxModal" data-bs-slide-to="6">
+        <div class="card-body">
+          <h6 class="card-title">Card title</h6>
+          <p class="card-text">Some supporting text.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card h-100">
+        <img src="https://storage.googleapis.com/acciojob-open-file-collections/image8.jpg" class="card-img-top gallery-img" data-bs-target="#lightboxModal" data-bs-slide-to="7">
+        <div class="card-body">
+          <h6 class="card-title">Card title</h6>
+          <p class="card-text">Another supporting text.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card h-100">
+        <img src="https://storage.googleapis.com/acciojob-open-file-collections/image9.jpg" class="card-img-top gallery-img" data-bs-target="#lightboxModal" data-bs-slide-to="8">
+        <div class="card-body">
+          <h6 class="card-title">Card title</h6>
+          <p class="card-text">More supporting text.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <!-- ===== Lightbox Modal with Carousel ===== -->
+  <div class="modal fade" id="lightboxModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-fullscreen">
+      <div class="modal-content bg-black">
+        <div class="modal-body p-0">
+          <div id="lightboxCarousel" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+              <!-- Each image as carousel item -->
+              <div class="carousel-item active">
+                <img src="https://storage.googleapis.com/acciojob-open-file-collections/image1.jpg" class="d-block w-100">
+              </div>
+              <div class="carousel-item">
+                <img src="https://storage.googleapis.com/acciojob-open-file-collections/image2.jpg" class="d-block w-100">
+              </div>
+              <div class="carousel-item">
+                <img src="https://storage.googleapis.com/acciojob-open-file-collections/image3.jpg" class="d-block w-100">
+              </div>
+              <div class="carousel-item">
+                <img src="https://storage.googleapis.com/acciojob-open-file-collections/image4.jpg" class="d-block w-100">
+              </div>
+              <div class="carousel-item">
+                <img src="https://storage.googleapis.com/acciojob-open-file-collections/image5.jpg" class="d-block w-100">
+              </div>
+              <div class="carousel-item">
+                <img src="https://storage.googleapis.com/acciojob-open-file-collections/image6.jpg" class="d-block w-100">
+              </div>
+              <div class="carousel-item">
+                <img src="https://storage.googleapis.com/acciojob-open-file-collections/image7.jpg" class="d-block w-100">
+              </div>
+              <div class="carousel-item">
+                <img src="https://storage.googleapis.com/acciojob-open-file-collections/image8.jpg" class="d-block w-100">
+              </div>
+              <div class="carousel-item">
+                <img src="https://storage.googleapis.com/acciojob-open-file-collections/image9.jpg" class="d-block w-100">
+              </div>
+            </div>
+            <!-- Carousel Controls -->
+            <button class="carousel-control-prev" type="button" data-bs-target="#lightboxCarousel" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon"></span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#lightboxCarousel" data-bs-slide="next">
+              <span class="carousel-control-next-icon"></span>
+            </button>
+          </div>
+        </div>
+        <button type="button" class="btn-close btn-close-white position-absolute top-0 end-0 m-3" data-bs-dismiss="modal"></button>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    // Sync clicked image index with carousel
+    document.querySelectorAll(".gallery-img").forEach(img => {
+      img.addEventListener("click", () => {
+        let index = img.getAttribute("data-bs-slide-to");
+        let myModal = new bootstrap.Modal(document.getElementById('lightboxModal'));
+        myModal.show();
+        let carousel = document.querySelector('#lightboxCarousel');
+        let bsCarousel = bootstrap.Carousel.getInstance(carousel) || new bootstrap.Carousel(carousel);
+        bsCarousel.to(index);
+      });
+    });
+  </script>
 </body>
-
 </html>
